feat: use go to develop protoc plugins

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ cpp/bin
 cpp/build
 cpp/src/protoconf/*
 third_party/protobuf/
+plugin/cmd/protoc-gen-cpp-tableau-loader/protoc-gen-cpp-tableau-loader
+plugin/cmd/protoc-gen-cpp-tableau-loader/test/src
