--- a/_lab/cpp/src/CMakeLists.txt
+++ b/_lab/cpp/src/CMakeLists.txt
@@ -12,10 +12,10 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++11 -Wno-literal-s
 
 # root dir define
 SET(CMAKE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-SET(THRID_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../third_party)
+SET(THRID_PARTY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../third_party)
 
 # google protobuf
-SET(PROTOBUF_ROOT_DIR ${THRID_PARTY_DIR}/protobuf/)
+SET(PROTOBUF_ROOT_DIR ${THRID_PARTY_DIR}/_submodules/protobuf/)
 SET(PROTOBUF_DIR ${PROTOBUF_ROOT_DIR}/src/)
 # SET(PROTOBUF_INCLUDE ${PROTOBUF_DIR}/google/protobuf)
 SET(PROTOBUF_LIB ${PROTOBUF_DIR}/.libs/)
