--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "third_party/protobuf"]
-	path = third_party/protobuf
-	url = https://github.com/protocolbuffers/protobuf.git
-[submodule "third_party/tableau"]
-	path = third_party/tableau
+[submodule "third_party/_submodules/protobuf"]
+	path = third_party/_submodules/protobuf
+	url = https://github.com/protocolbuffers/protobuf
+[submodule "third_party/_submodules/tableau"]
+	path = third_party/_submodules/tableau
 	url = https://github.com/tableauio/tableau
