--- a/.github/workflows/release-cpp.yml
+++ b/.github/workflows/release-cpp.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Create package
         id: package
         run: |
-          PACKAGE_NAME=tableauc.${GITHUB_REF#refs/tags/cmd/protoc-gen-cpp-tableau-loader/}.${{ matrix.goos }}.${{ matrix.goarch }}.tar.gz
+          PACKAGE_NAME=protoc-gen-cpp-tableau-loader.${GITHUB_REF#refs/tags/cmd/protoc-gen-cpp-tableau-loader/}.${{ matrix.goos }}.${{ matrix.goarch }}.tar.gz
           tar -czvf $PACKAGE_NAME -C build .
           echo ::set-output name=name::${PACKAGE_NAME}
       - name: Upload asset
