feat(cpp): demo and test for index feature

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ cmd/protoc-gen-go-tableau-loader/protoc-gen-go-tableau-loader
 
 test/protoconf
 test/go-tableau-loader/go-tableau-loader
+_lab/cpp/src/tableau/
