feat: upgrade CMake version to 3.22

--- a/_lab/cpp/src/CMakeLists.txt
+++ b/_lab/cpp/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.22)
 
 # set the project name
 project(loader)
@@ -6,8 +6,8 @@ file(GLOB_RECURSE PROTO_SOURCE *.cc)
 file(GLOB_RECURSE SOURCE *.cpp)
 
 # specify the C++ standard
-# set(CMAKE_CXX_STANDARD 11)
-# set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++11 -Wno-literal-suffix -Wno-error=literal-suffix -Wno-deprecated -Wno-unused-variable -Wno-sign-compare -Wno-strict-aliasing -fno-strict-aliasing -DNDEBUG")
 
 # root dir define
