--- a/test/cpp-tableau-loader/src/CMakeLists.txt
+++ b/test/cpp-tableau-loader/src/CMakeLists.txt
@@ -8,7 +8,7 @@ file(GLOB_RECURSE SOURCE *.cpp)
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++11 -Wno-literal-suffix -Wno-error=literal-suffix -Wno-deprecated -Wno-unused-variable -Wno-sign-compare -Wno-strict-aliasing -fno-strict-aliasing -DNDEBUG")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++11 -Wno-deprecated -Wno-unused-variable -Wno-sign-compare -Wno-strict-aliasing -fno-strict-aliasing -DNDEBUG")
 
 # root dir define
 SET(CMAKE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
