feat: init proj
feat: update go.mod and readme

feat: add some template code

feat: load from bin

feat: only support json and bin

feat: hub

feat: load methods

feat: add filter huboptions

feat: a simple example

feat: git ignore

feat: remove LoadMode

feat: update readme

feat: csharp ordered map

feat: add index

feat: encapsulate messager container

fix(index): correct csharp index logic and add test examples

feat: update index and version

feat: simplify some logic

feat: escapeIdentifier

feat: best practice

feat: go mod tidy

feat: simplify code and remove gen plugin as parameters

feat: use lower camel case for private variables

feat: OrderedMapValue not null

feat: add MessageParser instead of generic types

feat: add test case for load bin

feat: classes

feat: options and newline

feat: delete settings

feat: add bat scripts

feat: support ordered index

feat: update bin ext

fix: generate file path

feat: use *.pc.cs file ext

feat: thread-safe messager container

feat: use template to genearate hub

feat: update scripts

feat: add readonly

feat: orderedmap

feat: index

feat: revert

feat: ordered index

feat: ident

feat: IComparable

feat: map key

feat: map key

feat: use tuple

feat: leveld index

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ node_modules
 
 cmd/protoc-gen-cpp-tableau-loader/protoc-gen-cpp-tableau-loader
 cmd/protoc-gen-go-tableau-loader/protoc-gen-go-tableau-loader
+cmd/protoc-gen-csharp-tableau-loader/protoc-gen-csharp-tableau-loader
 
 test/go-tableau-loader/go-tableau-loader
 _lab/ts/src/protoconf
+!test/testdata/bin/
+test/csharp-tableau-loader/protoconf
+
