feat: support at least c++17

--- a/test/cpp-tableau-loader/src/CMakeLists.txt
+++ b/test/cpp-tableau-loader/src/CMakeLists.txt
@@ -5,16 +5,16 @@ project(loader)
 file(GLOB_RECURSE PROTO_SOURCE *.cc)
 file(GLOB_RECURSE SOURCE *.cpp)
 
-# Add option to switch between C++11 and C++17
-option(USE_CPP17 "Use C++17 standard (otherwise use C++11)" OFF)
+# Add option to switch between C++20 and C++17
+option(USE_CPP17 "Use C++17 standard (otherwise use C++20)" OFF)
 
 # specify the C++ standard
 if(USE_CPP17)
     set(CMAKE_CXX_STANDARD 17)
     message(STATUS "Using C++17 standard")
 else()
-    set(CMAKE_CXX_STANDARD 11)
-    message(STATUS "Using C++11 standard")
+    set(CMAKE_CXX_STANDARD 20)
+    message(STATUS "Using C++20 standard")
 endif()
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -32,7 +32,7 @@ else()
             set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lstdc++fs")
         endif()
     else()
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++11 -Wno-deprecated -Wno-unused-variable -Wno-sign-compare -Wno-strict-aliasing -fno-strict-aliasing -DNDEBUG")
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g -fPIC -std=c++20 -Wno-deprecated -Wno-unused-variable -Wno-sign-compare -Wno-strict-aliasing -fno-strict-aliasing -DNDEBUG")
     endif()
 endif()
 
@@ -65,7 +65,7 @@ else()
     SET(COMMON_LIB
         ${PROTOBUF_LIB}/libprotobuf.a
         pthread
-        $<$<BOOL:${USE_CPP17}>:stdc++fs>
+        stdc++fs
         )
 endif()
 
