--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "third_party/_submodules/protobuf"]
 	path = third_party/_submodules/protobuf
 	url = https://github.com/protocolbuffers/protobuf
+    ignore = dirty
 [submodule "third_party/_submodules/tableau"]
 	path = third_party/_submodules/tableau
 	url = https://github.com/tableauio/tableau
+    ignore = dirty
