--- a/.gitattributes
+++ b/.gitattributes
@@ -8,8 +8,8 @@
 # endings, and so they are checked in with CRLF endings, with a test
 # to catch problems. (See https://github.com/golang/go/issues/37791.)
 #
-# We'll prevent accidental CRLF line endings from entering the repo
-# via MR checks and tests.
+# You can prevent accidental CRLF line endings from entering the repo
+# via PR/MR checks.
 #
 # See https://github.com/golang/go/issues/9281.
 # See https://adaptivepatchwork.com/2012/03/01/mind-the-end-of-your-line.
